# internal/modules/config/dto.go
@@ -1,0 +1,7 @@
+package config
+
+type SnbConfig struct {
+	Endpoint string `json:"endpoint"`
+	Facility string `json:"facility"`
+	Device   string `json:"device"`
+}
